--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,10 +1,11 @@
 .header {
   position: relative;
   background-image: url('../images/bg-pattern-intro.svg');
-  background-position-x: -446px;
+  background-position-x: -27.875rem;
   background-repeat: no-repeat;
-  background-position-y: -1385px;
-  padding: 2rem 10.375rem;
+  background-position-y: -86.5625rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   border-radius: 0 0 0 60px;
   &::before {
     content: '';
@@ -39,13 +40,14 @@
         position: relative;
         margin-left: 2rem;
         span {
-          //background-color: rgb(95, 95, 95);
+          position: relative;
           color: $white;
           font-weight: 500;
           cursor: pointer;
-          &::after {
-            content: url(../images/icon-arrow-light.svg);
-            margin-left: 0.3rem;
+          img {
+            position: relative;
+            z-index: -1;
+            transition: all 150ms ease-in-out;
           }
           &::before {
             content: '';
@@ -55,12 +57,15 @@
             background-color: $white;
             bottom: 0;
             opacity: 0;
-            transition: all 250ms ease-in-out;
+            transition: all 150ms ease-in-out;
           }
-          &:hover {
+          &.selectedMenu {
             &::before {
               width: 83%;
               opacity: 1;
+            }
+            img {
+              transform: rotate(-180deg);
             }
           }
         }
@@ -76,6 +81,7 @@
           left: -1.5rem;
           opacity: 1;
           z-index: 2;
+          visibility: hidden;
           > a {
             &:not(:last-child) {
               margin-bottom: 1.09375rem;
@@ -88,10 +94,10 @@
             font-size: 14px;
 
             &:hover {
-              font-weight: 500;
+              font-weight: 700;
             }
           }
-        }
+        } //.dropdown
       }
     }
     &__cta {
