--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -11,10 +11,36 @@
   }
 }
 
+@keyframes displayMobileMenu {
+  from {
+    padding: 0;
+    margin-bottom: 0;
+    opacity: 0;
+  }
+  to {
+    padding: 1.5rem;
+    margin-bottom: 1.25rem;
+    opacity: 1;
+  }
+}
+
+@keyframes fadein {
+  from{
+    opacity: 0;
+    transform: scaleY(0);
+  }
+  
+  to {
+    opacity: 1;
+    transform: scaleY(1);
+  }
+}
 
 .displayMenu {
   animation: displayMenu 100ms ease-in-out forwards;
+  @include breakPointDown('790') {
+    animation: displayMobileMenu 450ms ease-in-out forwards;  
+    
+  }
 }
-.selectedMenu {
-    animation: selectedMenu 100ms ease-in-out forwards;
-}
+
