--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -22,6 +22,7 @@
     position: relative;
     align-items: center;
     justify-content: space-between;
+    z-index: 1;
     &__logo {
       img {
         display: block;
@@ -44,10 +45,12 @@
           color: $white;
           font-weight: 500;
           cursor: pointer;
-          img {
-            position: relative;
+          picture {
             z-index: -1;
-            transition: all 150ms ease-in-out;
+            position: relative;
+            img {
+              transition: all 150ms ease-in-out;
+            }
           }
           &::before {
             content: '';
@@ -60,17 +63,21 @@
             transition: all 150ms ease-in-out;
           }
           &.selectedMenu {
+            + .dropdown {
+              animation: displayMenu 100ms ease-in-out forwards;
+            }
             &::before {
               width: 83%;
               opacity: 1;
             }
-            img {
-              transform: rotate(-180deg);
+            picture {
+              img {
+                transform: rotate(-180deg);
+              }
             }
           }
         }
         .dropdown {
-          position: relative;
           background-color: white;
           border-radius: 0.3125rem;
           padding: 2rem 1.5rem;
@@ -83,6 +90,7 @@
           z-index: 2;
           visibility: hidden;
           > a {
+            transition: position 100ms ease-in-out;
             &:not(:last-child) {
               margin-bottom: 1.09375rem;
             }
@@ -92,12 +100,129 @@
             position: relative;
             font-weight: 400;
             font-size: 14px;
-
             &:hover {
               font-weight: 700;
             }
           }
         } //.dropdown
+      }
+      
+      @include breakPointDown('790') {
+        display: none;
+        opacity: 0;
+        transform: scaleY(0);
+        &.showMobileMenu{
+          display: block;
+          animation: fadein 250ms ease forwards;
+        }
+        flex-direction: column;
+        position: absolute;
+        top: 6rem;
+        padding: 2rem;
+        align-items: center;
+        background-color: $white;
+        width: 300px;
+        left: calc(50% - 150px);
+        border-radius: 0.3125rem;
+        z-index: 15;        
+        > div {
+          margin-left: unset;
+          &:nth-child(1) {
+            margin-left: unset;
+          }
+        }
+        &-linkContainer {
+          width: 100%;
+          span {
+            position: relative;
+            color: $veryDarkBlue;
+            font-weight: 500;
+            text-align: center;
+            margin-bottom: 1.5rem;
+            margin-left: 0.75rem;
+            &::before {
+              content: none;
+            }
+            &.selectedMenu {
+              + .dropdown {
+                animation: displayMobileMenu 250ms ease-in-out forwards;
+                > a {
+                  position: relative;
+                  visibility: visible;
+                  &:not(:last-child) {
+                    margin-bottom: 1.09375rem;
+                  }
+                }
+              }
+              &::before {
+                width: 0;
+                opacity: 0;
+              }
+            }
+          }
+          .dropdown {
+            background-color: $grayishBlue;
+            align-items: center;
+            border-radius: 0.3125rem;
+            padding: 0; //to 1.5rem
+            margin-bottom: 0; //to 1.25rem
+            color: $veryDarkBlue;
+            position: relative;
+            top: unset;
+            left: unset;
+            opacity: 1;
+            z-index: 2;
+            visibility: visible;
+            > a {
+              position: absolute;
+              visibility: hidden;
+              transition: margin-bottom 450ms ease-in-out;
+              &:not(:last-child) {
+                margin-bottom: 0;
+              }
+            }
+            p {
+              cursor: pointer;
+              position: relative;
+              font-weight: 500;
+              font-size: 14px;
+
+              &:hover {
+                font-weight: 700;
+              }
+            }
+          } //.dropdown
+        }
+      }
+      hr {
+        width: 100%;
+        color: $veryDarkGrayishBlue;
+        @include breakPointUp('791'){
+          display: none;
+        }
+      }
+      .mobile {
+        &__cta {
+          align-items: center;
+          .mobileLogin {
+            color: $veryDarkBlue;
+            background: none;
+            padding: 1rem;
+            font-weight: 500;
+            font-size: 16px;
+          }
+          .mobileSignUp {
+            color: $white;
+            background: linear-gradient(90deg, $bgveryLightRed, $bglightRed);
+            font-weight: 500;
+            padding-bottom: 14px;
+            padding-top: 10px;
+            font-size: 16px;
+          }
+          @include breakPointUp('791'){
+            display: none;
+          }
+        }
       }
     }
     &__cta {
@@ -114,6 +239,40 @@
           color: $white;
           background-color: $veryLightRed;
           border: solid 1px $veryLightRed;
+        }
+      }
+      @include breakPointDown('790'){
+        display: none;
+      }
+    }
+    &__hamburger {
+      display: none;
+      cursor: pointer;
+      align-items: center;
+      > span {
+        display: block;
+        background: $white;
+        width: 32px;
+        height: 2px;
+        transition: all 300ms ease-in-out;
+        &:not(:last-child){
+          margin-bottom: 6px;
+        }
+      }
+      @include breakPointDown('790'){
+        display: block;
+      }
+      &.open{
+        > span {
+          &:nth-child(1){
+            transform: translateY(8px) rotate(45deg);
+          }
+          &:nth-child(3){
+            transform: translateY(-8px) rotate(-45deg);
+          }
+          &:nth-child(2){
+            width: 0;
+          }
         }
       }
     }
