--- a/scss/style.css
+++ b/scss/style.css
@@ -1,8 +1,3 @@
-/* COLOR PALETTE */
-/*Primary*/
-/* Neutral */
-/* Gradients */
-/*FONTS*/
 @-webkit-keyframes displayMenu {
   from {
     visibility: hidden;
@@ -17,6 +12,7 @@
             transform: unset;
   }
 }
+
 @keyframes displayMenu {
   from {
     visibility: hidden;
@@ -32,16 +28,75 @@
   }
 }
 
+@-webkit-keyframes displayMobileMenu {
+  from {
+    padding: 0;
+    margin-bottom: 0;
+    opacity: 0;
+  }
+  to {
+    padding: 1.5rem;
+    margin-bottom: 1.25rem;
+    opacity: 1;
+  }
+}
+
+@keyframes displayMobileMenu {
+  from {
+    padding: 0;
+    margin-bottom: 0;
+    opacity: 0;
+  }
+  to {
+    padding: 1.5rem;
+    margin-bottom: 1.25rem;
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: scaleY(1);
+            transform: scaleY(1);
+  }
+}
+
 .displayMenu {
   -webkit-animation: displayMenu 100ms ease-in-out forwards;
           animation: displayMenu 100ms ease-in-out forwards;
 }
 
-.selectedMenu {
-  -webkit-animation: selectedMenu 100ms ease-in-out forwards;
-          animation: selectedMenu 100ms ease-in-out forwards;
+@media (max-width: 49.375rem) {
+  .displayMenu {
+    -webkit-animation: displayMobileMenu 450ms ease-in-out forwards;
+            animation: displayMobileMenu 450ms ease-in-out forwards;
+  }
 }
 
+/* COLOR PALETTE */
+/*Primary*/
+/* Neutral */
+/* Gradients */
+/*FONTS*/
 /*GOLBAL*/
 html {
   font-size: 100%;
@@ -62,6 +117,20 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
+}
+
+#overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0);
+  opacity: .8;
+  z-index: 1;
+  display: none;
+}
+
+#overlay.showOverlay {
+  display: block;
 }
 
 h1,
@@ -125,6 +194,20 @@ a:hover {
   }
 }
 
+@media (max-width: 58.125rem) {
+  .latPadding {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (max-width: 49.375rem) {
+  .latPadding {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
 .header {
   position: relative;
   background-image: url("../images/bg-pattern-intro.svg");
@@ -156,6 +239,7 @@ a:hover {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  z-index: 1;
 }
 
 .header .navBar__logo img {
@@ -188,9 +272,12 @@ a:hover {
   cursor: pointer;
 }
 
-.header .navBar__menu-linkContainer span img {
-  position: relative;
+.header .navBar__menu-linkContainer span picture {
   z-index: -1;
+  position: relative;
+}
+
+.header .navBar__menu-linkContainer span picture img {
   -webkit-transition: all 150ms ease-in-out;
   transition: all 150ms ease-in-out;
 }
@@ -207,18 +294,22 @@ a:hover {
   transition: all 150ms ease-in-out;
 }
 
+.header .navBar__menu-linkContainer span.selectedMenu + .dropdown {
+  -webkit-animation: displayMenu 100ms ease-in-out forwards;
+          animation: displayMenu 100ms ease-in-out forwards;
+}
+
 .header .navBar__menu-linkContainer span.selectedMenu::before {
   width: 83%;
   opacity: 1;
 }
 
-.header .navBar__menu-linkContainer span.selectedMenu img {
+.header .navBar__menu-linkContainer span.selectedMenu picture img {
   -webkit-transform: rotate(-180deg);
           transform: rotate(-180deg);
 }
 
 .header .navBar__menu-linkContainer .dropdown {
-  position: relative;
   background-color: white;
   border-radius: 0.3125rem;
   padding: 2rem 1.5rem;
@@ -230,6 +321,11 @@ a:hover {
   opacity: 1;
   z-index: 2;
   visibility: hidden;
+}
+
+.header .navBar__menu-linkContainer .dropdown > a {
+  -webkit-transition: position 100ms ease-in-out;
+  transition: position 100ms ease-in-out;
 }
 
 .header .navBar__menu-linkContainer .dropdown > a:not(:last-child) {
@@ -245,6 +341,145 @@ a:hover {
 
 .header .navBar__menu-linkContainer .dropdown p:hover {
   font-weight: 700;
+}
+
+@media (max-width: 49.375rem) {
+  .header .navBar__menu {
+    display: none;
+    opacity: 0;
+    -webkit-transform: scaleY(0);
+            transform: scaleY(0);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    position: absolute;
+    top: 6rem;
+    padding: 2rem;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: white;
+    width: 300px;
+    left: calc(50% - 150px);
+    border-radius: 0.3125rem;
+    z-index: 15;
+  }
+  .header .navBar__menu.showMobileMenu {
+    display: block;
+    -webkit-animation: fadein 250ms ease forwards;
+            animation: fadein 250ms ease forwards;
+  }
+  .header .navBar__menu > div {
+    margin-left: unset;
+  }
+  .header .navBar__menu > div:nth-child(1) {
+    margin-left: unset;
+  }
+  .header .navBar__menu-linkContainer {
+    width: 100%;
+  }
+  .header .navBar__menu-linkContainer span {
+    position: relative;
+    color: #1f3f5b;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    margin-left: 0.75rem;
+  }
+  .header .navBar__menu-linkContainer span::before {
+    content: none;
+  }
+  .header .navBar__menu-linkContainer span.selectedMenu + .dropdown {
+    -webkit-animation: displayMobileMenu 250ms ease-in-out forwards;
+            animation: displayMobileMenu 250ms ease-in-out forwards;
+  }
+  .header .navBar__menu-linkContainer span.selectedMenu + .dropdown > a {
+    position: relative;
+    visibility: visible;
+  }
+  .header .navBar__menu-linkContainer span.selectedMenu + .dropdown > a:not(:last-child) {
+    margin-bottom: 1.09375rem;
+  }
+  .header .navBar__menu-linkContainer span.selectedMenu::before {
+    width: 0;
+    opacity: 0;
+  }
+  .header .navBar__menu-linkContainer .dropdown {
+    background-color: #c8c8cb;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-radius: 0.3125rem;
+    padding: 0;
+    margin-bottom: 0;
+    color: #1f3f5b;
+    position: relative;
+    top: unset;
+    left: unset;
+    opacity: 1;
+    z-index: 2;
+    visibility: visible;
+  }
+  .header .navBar__menu-linkContainer .dropdown > a {
+    position: absolute;
+    visibility: hidden;
+    -webkit-transition: margin-bottom 450ms ease-in-out;
+    transition: margin-bottom 450ms ease-in-out;
+  }
+  .header .navBar__menu-linkContainer .dropdown > a:not(:last-child) {
+    margin-bottom: 0;
+  }
+  .header .navBar__menu-linkContainer .dropdown p {
+    cursor: pointer;
+    position: relative;
+    font-weight: 500;
+    font-size: 14px;
+  }
+  .header .navBar__menu-linkContainer .dropdown p:hover {
+    font-weight: 700;
+  }
+}
+
+.header .navBar__menu hr {
+  width: 100%;
+  color: #4b5862;
+}
+
+@media (min-width: 49.4375rem) {
+  .header .navBar__menu hr {
+    display: none;
+  }
+}
+
+.header .navBar__menu .mobile__cta {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .navBar__menu .mobile__cta .mobileLogin {
+  color: #1f3f5b;
+  background: none;
+  padding: 1rem;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.header .navBar__menu .mobile__cta .mobileSignUp {
+  color: white;
+  background: -webkit-gradient(linear, left top, right top, from(#ff8f70), to(#ff3d54));
+  background: linear-gradient(90deg, #ff8f70, #ff3d54);
+  font-weight: 500;
+  padding-bottom: 14px;
+  padding-top: 10px;
+  font-size: 16px;
+}
+
+@media (min-width: 49.4375rem) {
+  .header .navBar__menu .mobile__cta {
+    display: none;
+  }
 }
 
 .header .navBar__cta .login {
@@ -263,6 +498,53 @@ a:hover {
   color: white;
   background-color: #ff7a85;
   border: solid 1px #ff7a85;
+}
+
+@media (max-width: 49.375rem) {
+  .header .navBar__cta {
+    display: none;
+  }
+}
+
+.header .navBar__hamburger {
+  display: none;
+  cursor: pointer;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header .navBar__hamburger > span {
+  display: block;
+  background: white;
+  width: 32px;
+  height: 2px;
+  -webkit-transition: all 300ms ease-in-out;
+  transition: all 300ms ease-in-out;
+}
+
+.header .navBar__hamburger > span:not(:last-child) {
+  margin-bottom: 6px;
+}
+
+@media (max-width: 49.375rem) {
+  .header .navBar__hamburger {
+    display: block;
+  }
+}
+
+.header .navBar__hamburger.open > span:nth-child(1) {
+  -webkit-transform: translateY(8px) rotate(45deg);
+          transform: translateY(8px) rotate(45deg);
+}
+
+.header .navBar__hamburger.open > span:nth-child(3) {
+  -webkit-transform: translateY(-8px) rotate(-45deg);
+          transform: translateY(-8px) rotate(-45deg);
+}
+
+.header .navBar__hamburger.open > span:nth-child(2) {
+  width: 0;
 }
 
 .header__hero {
