--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,7 +1,10 @@
 $breakPointsDown: (
   '1148': 71.75rem,
   '930': 58.125rem,
+  '830': 51.875rem,
   '790': 49.375rem,
+  '730': 45.625rem,
+  '600': 37.5rem,
 );
 
 $breakPointsUp: (
