--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,9 +4,22 @@
   background-position-x: -27.875rem;
   background-repeat: no-repeat;
   background-position-y: -86.5625rem;
-  padding-top: 2rem;
+  padding-top: 4rem;
   padding-bottom: 2rem;
-  border-radius: 0 0 0 60px;
+  border-radius: 0 0 0 90px;
+  @include breakPointDown('930') {
+    background-position-x: -22.875rem;
+    background-position-y: -27.5625rem;
+    background-size: 102rem;
+  }
+  @include breakPointDown('790') {
+    padding-bottom: 7rem;
+  }
+  @include breakPointDown('730') {
+    background-position-x: -24.875rem;
+    background-position-y: -16.5625rem;
+    background-size: 97rem;
+  }
   &::before {
     content: '';
     position: absolute;
@@ -16,6 +29,7 @@
     width: 100%;
     height: 100%;
     background: linear-gradient(90deg, $bgveryLightRed, $bglightRed);
+    border-radius: 0 0 0 90px;
   }
 
   .navBar {
@@ -106,12 +120,12 @@
           }
         } //.dropdown
       }
-      
+
       @include breakPointDown('790') {
         display: none;
         opacity: 0;
         transform: scaleY(0);
-        &.showMobileMenu{
+        &.showMobileMenu {
           display: block;
           animation: fadein 250ms ease forwards;
         }
@@ -124,7 +138,7 @@
         width: 300px;
         left: calc(50% - 150px);
         border-radius: 0.3125rem;
-        z-index: 15;        
+        z-index: 15;
         > div {
           margin-left: unset;
           &:nth-child(1) {
@@ -197,7 +211,7 @@
       hr {
         width: 100%;
         color: $veryDarkGrayishBlue;
-        @include breakPointUp('791'){
+        @include breakPointUp('791') {
           display: none;
         }
       }
@@ -219,7 +233,7 @@
             padding-top: 10px;
             font-size: 16px;
           }
-          @include breakPointUp('791'){
+          @include breakPointUp('791') {
             display: none;
           }
         }
@@ -241,7 +255,7 @@
           border: solid 1px $veryLightRed;
         }
       }
-      @include breakPointDown('790'){
+      @include breakPointDown('790') {
         display: none;
       }
     }
@@ -255,22 +269,22 @@
         width: 32px;
         height: 2px;
         transition: all 300ms ease-in-out;
-        &:not(:last-child){
+        &:not(:last-child) {
           margin-bottom: 6px;
         }
       }
-      @include breakPointDown('790'){
+      @include breakPointDown('790') {
         display: block;
       }
-      &.open{
+      &.open {
         > span {
-          &:nth-child(1){
+          &:nth-child(1) {
             transform: translateY(8px) rotate(45deg);
           }
-          &:nth-child(3){
+          &:nth-child(3) {
             transform: translateY(-8px) rotate(-45deg);
           }
-          &:nth-child(2){
+          &:nth-child(2) {
             width: 0;
           }
         }
@@ -288,6 +302,10 @@
       padding-bottom: 1.6rem;
       font-size: 3.75rem;
       line-height: 3.75rem;
+      @include breakPointDown('600') {
+        font-size: 36px;
+        letter-spacing: -1px;
+      }
     }
     &-text {
       padding-bottom: 3rem;
