--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,7 @@
 $breakPointsDown: (
+  '1340': 83.75rem,
   '1148': 71.75rem,
+  '1023': 63.9375rem,
   '930': 58.125rem,
   '830': 51.875rem,
   '790': 49.375rem,
