--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,4 +3,5 @@
 @import 'variables';
 @import 'global';
 @import 'header';
-@import 'main';
+@import 'main-designedForFuture';
+@import 'main-stateOfArt';
