--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -37,6 +37,12 @@ h4 {
   box-sizing: inherit;
   font-family: 'Overpass', sans-serif;
 }
+h3{  
+  font-size: 1.625rem;
+}
+h2{
+  font-size: 2.25rem;
+}
 
 p {
   font-family: 'Overpass', sans-serif;  
