--- a/scss/style.css
+++ b/scss/style.css
@@ -142,6 +142,14 @@ h4 {
   font-family: 'Overpass', sans-serif;
 }
 
+h3 {
+  font-size: 1.625rem;
+}
+
+h2 {
+  font-size: 2.25rem;
+}
+
 p {
   font-family: 'Overpass', sans-serif;
   font-weight: 100;
@@ -666,6 +674,7 @@ a:hover {
 
 .main .designedForFuture {
   color: #1f3f5b;
+  padding-bottom: 17.8125rem;
 }
 
 .main .designedForFuture__title {
@@ -674,7 +683,6 @@ a:hover {
   width: fit-content;
   margin: auto;
   margin-bottom: 6.875rem;
-  font-size: 2.25rem;
   text-align: center;
 }
 
@@ -710,7 +718,6 @@ a:hover {
 }
 
 .main .designedForFuture__container-info > h3 {
-  font-size: 1.625rem;
   margin-bottom: 1.875rem;
 }
 
@@ -749,5 +756,74 @@ a:hover {
     position: relative;
     bottom: 60px;
   }
+}
+
+.main .stateOfArt {
+  position: relative;
+  color: white;
+  background: -webkit-gradient(linear, left top, right top, from(#2c2d3f), to(#3f4164));
+  background: linear-gradient(90deg, #2c2d3f, #3f4164);
+  padding-top: 7.125rem;
+  padding-bottom: 6.875rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.main .stateOfArt::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-image: url("../images/bg-pattern-circles.svg");
+  background-repeat: no-repeat;
+  background-position-x: -215px;
+  background-position-y: -500px;
+}
+
+.main .stateOfArt__phones img {
+  position: absolute;
+  left: 8.125rem;
+  top: -4.25rem;
+}
+
+@media (max-width: 83.75rem) {
+  .main .stateOfArt__phones img {
+    top: -2.8125rem;
+  }
+}
+
+@media (max-width: 77.5rem) {
+  .main .stateOfArt__phones img {
+    top: -2rem;
+  }
+}
+
+@media (max-width: 71.75rem) {
+  .main .stateOfArt__phones img {
+    left: 3.5rem;
+  }
+}
+
+.main .stateOfArt__info {
+  width: 31.25rem;
+}
+
+@media (max-width: 83.75rem) {
+  .main .stateOfArt__info {
+    width: 25.25rem;
+  }
+}
+
+@media (max-width: 77.5rem) {
+  .main .stateOfArt__info {
+    width: 20.25rem;
+  }
+}
+
+.main .stateOfArt__info > h2 {
+  margin-bottom: 1.125rem;
 }
 /*# sourceMappingURL=style.css.map */
