--- a/scss/_main-stateOfArt.scss
+++ b/scss/_main-stateOfArt.scss
@@ -1,53 +1,87 @@
-.main{    
-    .stateOfArt{
-        position: relative;
-        color: $white;
-        background: linear-gradient(90deg, $veryDarkGrayBlue, $veryDarkDesaturatedBlue);
-        padding-top: 7.125rem;
-        padding-bottom: 6.875rem;
-        justify-content: space-between;
-        &::before{
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background-image: url('../images/bg-pattern-circles.svg');
-            background-repeat: no-repeat;
-            background-position-x: -215px;
-            background-position-y: -500px;
-        }
-        &__phones{
-            img{
-                position: absolute;
-                left: 8.125rem;
-                top: -4.25rem;
-                @include breakPointDown('1340'){
-                    top: -2.8125rem;
-                }
-                @include breakPointDown('1240'){
-                    top: -2rem;
-                }
-                @include breakPointDown('1148'){
-                    left: 3.5rem;
-                }
-            };
-        }
-        &__info{
-            width: 31.25rem;
-            @include breakPointDown('1340'){
-                width: 25.25rem;
-            }
-            @include breakPointDown('1240'){
-                width: 20.25rem;
-            }
-
-            > h2{
-                margin-bottom: 1.125rem;
-            }
-        }
+.main {
+  .stateOfArt {
+    position: relative;
+    color: $white;
+    background: linear-gradient(
+      90deg,
+      $veryDarkGrayBlue,
+      $veryDarkDesaturatedBlue
+    );
+    padding-top: 7.125rem;
+    padding-bottom: 6.875rem;
+    justify-content: space-between;
+    border-radius: 0 90px 0 90px;
+    @include breakPointDown('1023') {
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding-top: 14rem;
+      padding-bottom: 7.5rem;
+      background: linear-gradient(
+        180deg,
+        $veryDarkGrayBlue,
+        $veryDarkDesaturatedBlue
+      );
     }
+    &::before {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      background-image: url('../images/bg-pattern-circles.svg');
+      background-repeat: no-repeat;
+      background-position-x: -13.4375rem;
+      background-position-y: -31.25rem;
+      border-radius: 0 90px 0 90px;
+      @include breakPointDown('1023') {
+        background-position-x: -6.9rem;
+        background-position-y: -14.5rem;
+        background-size: 37.1rem;
+      }
+    }
+    &__phones {
+      img {
+        position: absolute;
+        left: 8.125rem;
+        top: -4.25rem;
+        @include breakPointDown('1340') {
+          top: -2.8125rem;
+        }
+        @include breakPointDown('1240') {
+          top: -2rem;
+        }
+        @include breakPointDown('1148') {
+          left: 3.5rem;
+        }
+        @include breakPointDown('1023') {
+          top: -11.5rem;
+          left: calc(50% - 187.5px);
+          width: 375px;
+        }
+      }
+    }
+    &__info {
+      width: 31.25rem;
+      position: relative;
+      z-index: 5;
+      @include breakPointDown('1340') {
+        width: 25.25rem;
+      }
+      @include breakPointDown('1240') {
+        width: 20.25rem;
+      }
+      @include breakPointDown('1023') {
+        width: unset;
+        text-align: center;
+      }
+
+      > h2 {
+        margin-bottom: 1.125rem;
+      }
+    }
+  }
 }
 
-// 
+//
