--- a/scss/style.css
+++ b/scss/style.css
@@ -144,6 +144,7 @@ h4 {
 
 h3 {
   font-size: 1.625rem;
+  margin-bottom: 1.875rem;
 }
 
 h2 {
@@ -723,10 +724,6 @@ a:hover {
   }
 }
 
-.main .designedForFuture__container-info > h3 {
-  margin-bottom: 1.875rem;
-}
-
 .main .designedForFuture__container-info > p:not(:last-child) {
   margin-bottom: 5.125rem;
 }
@@ -877,5 +874,31 @@ a:hover {
 
 .main .stateOfArt__info > h2 {
   margin-bottom: 1.125rem;
+}
+
+.main .freeOpenSimple {
+  color: #1f3f5b;
+}
+
+.main .freeOpenSimple__container {
+  position: relative;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-top: 18.75rem;
+}
+
+.main .freeOpenSimple__container-img img {
+  position: absolute;
+  left: -275px;
+  top: 130px;
+}
+
+.main .freeOpenSimple__container-info {
+  width: 45.7%;
+}
+
+.main .freeOpenSimple__container-info > p:not(:last-child) {
+  margin-bottom: 5rem;
 }
 /*# sourceMappingURL=style.css.map */
