--- a/scss/style.css
+++ b/scss/style.css
@@ -888,17 +888,72 @@ a:hover {
   padding-top: 18.75rem;
 }
 
-.main .freeOpenSimple__container-img img {
+@media (max-width: 63.9375rem) {
+  .main .freeOpenSimple__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    padding-top: 3.75rem;
+  }
+}
+
+.main .freeOpenSimple__container-img .laptopDesktop {
   position: absolute;
   left: -275px;
   top: 130px;
+}
+
+@media (max-width: 77.5rem) {
+  .main .freeOpenSimple__container-img .laptopDesktop {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+    left: -317px;
+  }
+}
+
+@media (max-width: 63.9375rem) {
+  .main .freeOpenSimple__container-img .laptopDesktop {
+    display: none;
+  }
+}
+
+.main .freeOpenSimple__container-img .laptopMobile {
+  display: none;
+}
+
+@media (max-width: 63.9375rem) {
+  .main .freeOpenSimple__container-img .laptopMobile {
+    display: block;
+    margin-bottom: 2.1875rem;
+  }
 }
 
 .main .freeOpenSimple__container-info {
   width: 45.7%;
 }
 
+@media (max-width: 63.9375rem) {
+  .main .freeOpenSimple__container-info {
+    width: unset;
+  }
+}
+
 .main .freeOpenSimple__container-info > p:not(:last-child) {
   margin-bottom: 5rem;
+}
+
+@media (max-width: 63.9375rem) {
+  .main .freeOpenSimple__container-info > p:not(:last-child) {
+    margin-bottom: 2.8125rem;
+    padding: 0 0.5px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
