--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,25 +1,65 @@
-.footer{
-    background-color: $veryDarkBlackBlue;
-    &__container{
-        color: $white;
-        padding-top: 4.0625rem;
-        padding-bottom: 4.6875rem;
-        > * {
-            flex: 1;
-            max-width: 17.8125rem;
-        }
-        span{
-            &:not(:last-child){
-                margin-bottom: 1rem;
-            }
-            &:nth-child(1){
-                padding-top: 0.6875rem;
-                margin-bottom: 2.1875rem;
-                font-weight: 700;
-            }
-        }
-        a {
-            color: $white;
-        }
+.footer {
+  background-color: $veryDarkBlackBlue;
+  border-radius: 0 90px 0 0;
+  &__container {
+    color: $white;
+    padding-top: 4.0625rem;
+    padding-bottom: 4.6875rem;
+    @include breakPointDown('730') {
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      &-logo {
+        margin-bottom: 4rem;
+      }
     }
+    > * {
+      flex: 1;
+      max-width: 17.8125rem;
+    }
+    span {
+      color: $white;
+      &:not(:last-child) {
+        margin-bottom: 1rem;
+      }
+      &:nth-child(1) {
+        padding-top: 0.6875rem;
+        margin-bottom: 2.1875rem;
+        font-weight: 700;
+      }
+      @include breakPointDown('730') {
+        &:last-child {
+          margin-bottom: 3.125rem;
+        }
+      }
+    }
+    a {
+      color: $white;
+      position: relative;
+      &::before {
+        content: '';
+        position: absolute;
+        width: 0;
+        bottom: 0;
+        height: 1px;
+        background-color: $white;
+        transition: all 250ms ease-in-out;
+      }
+      &:hover {
+        &::before {
+          width: 100%;
+        }
+      }
+    }
+  }
+}
+.attribution {
+  background-color: $veryDarkBlackBlue;
+  color: $white;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  padding: 1rem 0;
+  a {
+    color: $lightRed;
+  }
 }
