--- a/scss/style.css
+++ b/scss/style.css
@@ -959,6 +959,7 @@ a:hover {
 
 .footer {
   background-color: #25252d;
+  border-radius: 0 90px 0 0;
 }
 
 .footer__container {
@@ -967,11 +968,31 @@ a:hover {
   padding-bottom: 4.6875rem;
 }
 
+@media (max-width: 45.625rem) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+  }
+  .footer__container-logo {
+    margin-bottom: 4rem;
+  }
+}
+
 .footer__container > * {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
   max-width: 17.8125rem;
+}
+
+.footer__container span {
+  color: white;
 }
 
 .footer__container span:not(:last-child) {
@@ -984,7 +1005,41 @@ a:hover {
   font-weight: 700;
 }
 
+@media (max-width: 45.625rem) {
+  .footer__container span:last-child {
+    margin-bottom: 3.125rem;
+  }
+}
+
 .footer__container a {
   color: white;
+  position: relative;
+}
+
+.footer__container a::before {
+  content: '';
+  position: absolute;
+  width: 0;
+  bottom: 0;
+  height: 1px;
+  background-color: white;
+  -webkit-transition: all 250ms ease-in-out;
+  transition: all 250ms ease-in-out;
+}
+
+.footer__container a:hover::before {
+  width: 100%;
+}
+
+.attribution {
+  background-color: #25252d;
+  color: white;
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+  padding: 1rem 0;
+}
+
+.attribution a {
+  color: #ff525d;
 }
 /*# sourceMappingURL=style.css.map */
