--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -17,6 +17,9 @@
     margin-bottom: 0;
     opacity: 0;
   }
+  70%{
+    opacity: 0;
+  }
   to {
     padding: 1.5rem;
     margin-bottom: 1.25rem;
