--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -58,7 +58,8 @@
   color: $white;
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
-  padding: 1rem 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   a {
     color: $lightRed;
   }
