--- a/scss/style.css
+++ b/scss/style.css
@@ -1042,7 +1042,8 @@ a:hover {
   color: white;
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
-  padding: 1rem 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .attribution a {
